--- a/scss/_searchbar.scss
+++ b/scss/_searchbar.scss
@@ -1,6 +1,6 @@
 input {
     width: 70%;
-    transition: width .5s;
+    transition: width .5s ease-in-out;
     padding: 15px;
     margin-top: 40px;
     font-family: sans-serif;
