code refactoring layout and changes to better reflect mock up

--- a/scss/component/_gallery.scss
+++ b/scss/component/_gallery.scss
@@ -2,5 +2,5 @@
     display: grid; 
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     gap: 20px;
-    padding: 50px;
+    padding: 30px 70px 70px 70px;
 }
