--- a/css/style.css
+++ b/css/style.css
@@ -583,16 +583,18 @@ a {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   gap: 20px;
-  padding: 50px;
+  padding: 30px 70px 70px 70px;
 }
 
 input {
   width: 70%;
   transition: width 0.5s ease-in-out;
-  padding: 15px;
+  padding: 20px 10px;
   margin-top: 40px;
   font-family: sans-serif;
   font-size: 0.8rem;
+  border: 3px solid #ccc;
+  border-radius: 10px;
 }
 input:focus {
   width: 85%;
