--- a/scss/component/_searchbar.scss
+++ b/scss/component/_searchbar.scss
@@ -1,10 +1,12 @@
 input {
     width: 70%;
     transition: width .5s ease-in-out;
-    padding: 15px;
+    padding: 20px 10px;
     margin-top: 40px;
     font-family: sans-serif;
     font-size: .80rem;
+    border: 3px solid $search-color;
+    border-radius: 10px;
     &:focus {
         width: 85%;
     }
