--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,3 @@
-@import 'normalize',
-        'init',
-        'gallery',
-        'searchbar';
+@import 'utilities/index',
+        'base/index',
+        'component/index';
